--- a/src/Figure.3/Progress_Gviz.Rmd
+++ b/src/Figure.3/Progress_Gviz.Rmd
@@ -30,7 +30,7 @@ target <- target[1]
 ```{r}
 
 
-dss <- read_tsv(file = "/Users/ds/Desktop/projects/lncRNA/results/DSS_mCPRC_PRAD.bed", col_names = c("chrom", "start", "end", "Diff", "Stat"))
+dss <- read_tsv(file = "/Users/ds/Desktop/projects/mCRPC_lncRNA_analysis//results/DSS_mCPRC_PRAD.bed", col_names = c("chrom", "start", "end", "Diff", "Stat"))
 dss <- dss %>% dplyr::filter(chrom == chr) %>% dplyr::select(-Stat) %>% mutate(Diff = Diff * 100) %>% GRanges()
 
 
@@ -86,8 +86,8 @@ itrack <- IdeogramTrack(genome = "hg38", chromosome = chr)
 
 
 
-pdf("/Users/ds/Desktop/plot.pdf", width = 10)
-plotTracks(list(itrack,gtrack, dTrack,arbtrack, atactrack, atrack, grtrack), from = start(target), to = end(target), type = "histogram",ylim = c(-30,0))
+pdf("/Users/ds/Desktop/plot.pdf", width = 10, height = 10)
+plotTracks(list(gtrack, dTrack,arbtrack, atactrack, atrack, grtrack), from = start(target), to = end(target), type = "histogram",ylim = c(-30,0), cex.title = 1.3)
 dev.off()   
            
 
